[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/UbuntuTitleFont.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/ui/ui_arrow.png" type="Texture" id=2]
[ext_resource path="res://prefabs/CreateUnitPanel.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
outline_color = Color( 0.0784314, 0.0784314, 0.0784314, 1 )
extra_spacing_bottom = -2
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("btn1:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("btn2:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("btn3:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1 ), Vector2( 1, 1 ) ]
}

[node name="CreateUnitPanel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -661.0
margin_top = -189.0
margin_right = 661.0
margin_bottom = 257.0
color = Color( 0.0703125, 0.0703125, 0.0703125, 0.705882 )

[node name="ColorRect2" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -661.0
margin_top = -799.0
margin_right = 661.0
margin_bottom = -353.0
color = Color( 0.0703125, 0.0703125, 0.0703125, 0.705882 )

[node name="ColorRect3" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0705882, 0.0705882, 0.0705882, 0 )

[node name="Label" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -249.5
margin_top = 51.0
margin_right = 249.5
margin_bottom = 89.0
custom_colors/font_color = Color( 0.862745, 0.862745, 0.862745, 1 )
custom_constants/line_spacing = -2
custom_fonts/font = SubResource( 1 )
text = "Chose a unit"
align = 1
valign = 1
autowrap = true

[node name="btn1" type="Button" parent="."]
margin_left = 163.0
margin_top = 112.0
margin_right = 203.0
margin_bottom = 156.0
rect_scale = Vector2( 1.12865, 1 )
rect_pivot_offset = Vector2( 0.371628, 22 )
focus_mode = 0
flat = true
__meta__ = {
"_edit_group_": true
}

[node name="TextureRect" type="TextureRect" parent="btn1"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_rotation = -90.0
rect_pivot_offset = Vector2( 20, 22 )
texture = ExtResource( 2 )
expand = true

[node name="btn2" type="Button" parent="."]
margin_left = 163.0
margin_top = 159.0
margin_right = 203.0
margin_bottom = 203.0
rect_scale = Vector2( 1.1769, 1 )
rect_pivot_offset = Vector2( 0.041275, 22 )
focus_mode = 0
flat = true
__meta__ = {
"_edit_group_": true
}

[node name="TextureRect" type="TextureRect" parent="btn2"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_rotation = -90.0
rect_pivot_offset = Vector2( 20, 22 )
texture = ExtResource( 2 )
expand = true

[node name="btn3" type="Button" parent="."]
margin_left = 163.0
margin_top = 206.0
margin_right = 203.0
margin_bottom = 250.0
rect_scale = Vector2( 1.15848, 1 )
rect_pivot_offset = Vector2( -0.276299, 22 )
focus_mode = 0
flat = true
__meta__ = {
"_edit_group_": true
}

[node name="TextureRect" type="TextureRect" parent="btn3"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_rotation = -90.0
rect_pivot_offset = Vector2( 20, 22 )
texture = ExtResource( 2 )
expand = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
anims/idle = SubResource( 2 )
